<resources>
    <string name="app_name">AppMascota</string>
    <string name="etUser_Hint">Usuario</string>
    <string name="etPass_Hint">Contraseña</string>
    <string name="etPassConfirmed_Hint">Confirmar Contraseña</string>
    <string name="btnLogin_Text">Iniciar Sesion</string>
    <string name="btnNewAccount_Text">Crear Cuenta</string>
    <string name="btnRegister_Text">Registrarme</string>
    <string name="etNames_Hint">Nombres</string>
    <string name="etLastNames_Hint">Apellidos</string>
    <string name="spDepartamento_Prompt">Seleccione un Departamento</string>
    <string name="spMunicipio_Prompt">Seleccione un Municipio</string>
    <string name="sp_EditDepartamento_Text">Editar Departamento</string>
    <string name="sp_EditMunicipio_Text">Editar Municipio</string>
    <string name="tvDescripcion_Text">Completa los Siguientes Datos:</string>
    <string name="tvTitle_Text">Ajustes</string>
    <string name="tvTitle2_Text">Actualizar mi Telefono</string>
    <string name="tvTitle3_Text">Actualizar mi Ubicacion</string>
    <string name="tvTitleInicio_Text">Inicio</string>
    <string name="tvTitleMascotas_Text">Mis Mascotas</string>
    <string name="tvTitleAdopciones_Text">Mis Adopciones</string>
    <string name="etPetRaza">Raza de Mascota</string>
    <string name="etPetNombre">Nombre de Mascota</string>
    <string name="etPetEdad">Edad de Mascota (En años)</string>
    <string name="etPetSexoMascota">Sexo de Mascota</string>
    <string name="etnPhone">Telefono</string>
    <string name="et_EditPhone">Editar Telefono</string>
    <string name="tvAppName_Text">PetsApp</string>
</resources>