<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background2">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="655dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/etNames_Hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etLastNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:drawablePadding="20dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:ems="10"
                android:hint="@string/etLastNames_Hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spDepartamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:prompt="@string/spDepartamento_Prompt"
                android:spinnerMode="dropdown"
                tools:listitem="@layout/item_spin"
                android:background="@drawable/spinner_style"/>

            <Spinner
                android:id="@+id/spMunicipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:prompt="@string/spMunicipio_Prompt"
                android:spinnerMode="dropdown"
                tools:listitem="@layout/item_spin"
                android:background="@drawable/spinner_style"/>

            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/etUser_Hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/etPass_Hint"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/etPassConfirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/etPassConfirmed_Hint"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


